# FIFA-CLONE

./: .clangd  CMakeLists.txt  Makefile  README.md  main.cpp
.cache/clangd/index/: component.h.B9A41855B4524E61.idx  config.cpp.6E8DE2EE3ABEE144.idx  custom_scene.h.B1C063C7120E51DF.idx  dg_engine_std.h.6D626B28AFCC4F9C.idx  g_object.cpp.07D35350C852188E.idx  g_object.h.8031148682247ACC.idx  s_renderer.cpp.7F2B100414FD36C8.idx  scene.cpp.04127B6499296877.idx  scene.h.FAFE19799C0F4ED7.idx
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
cmake/.cache/clangd/index/: D3D11_PixelShader_Advanced.h.322A9FA744D400AF.idx  D3D11_PixelShader_Colors.h.749E27004FFFF0A9.idx  D3D11_PixelShader_Textures.h.0D1C6C1742E935A7.idx  D3D11_VertexShader.h.0D09F163B4101F53.idx  D3D12_Blit.h.DF3F5BBA0FA427F2.idx  D3D12_PixelShader_Advanced.h.774D26CCFB3ECB89.idx  D3D12_PixelShader_Colors.h.0284754337E1417E.idx  D3D12_PixelShader_Textures.h.F2A439DD770F33A5.idx  D3D12_RootSig_Advanced.h.13D9020DA390D222.idx  D3D12_RootSig_Color.h.ED7D026FBF12CBF2.idx  D3D12_RootSig_Texture.h.F9FE662957923EA3.idx  D3D12_VertexShader_Advanced.h.E8CE7924A244692A.idx  D3D12_VertexShader_Color.h.956D7EA9101F1BCA.idx  D3D12_VertexShader_Texture.h.597298E72FA18162.idx  D3D9_PixelShader_Palette_Linear.h.45CE71F584F706FD.idx  D3D9_PixelShader_Palette_Nearest.h.2D367E5E4BAEF6AB.idx  (+677 more)
include/: Scene.h  component.h  config.h  custom_scene.h  g_object.h  game_scene.h  intro_scene.h  menu_scene.h  options_scene.h
include/engine/: BoxCollider.h  GameObject.h  b_collider.h  component.h  dg_engine_std.h  dg_engine_stdc++.h  dg_texture.h  g_object.h  scene.h  transform.h
include/engine/Components/: BoxCollider.h  Component.h  Transform.h
src/: config.cpp  custom_scene.cpp  intro_scene.cpp  scene.cpp
src/engine/: BoxCollider.cpp  GameObject.cpp  component.cpp  dg_texture.cpp  g_object.cpp  scene.cpp  transform.cpp
src/engine/Components/: BoxCollider.cpp  Component.cpp  Transform.cpp
